# Qt_Practice

./: README.md  how_to_use_qmake.md
Qt/lesson1/: Makefile  hello.pro  main.cpp
Qt6_Quick/MultiWindowTest1/: CMakeLists.txt  SubWindow.qml  main.cpp  main.qml
Qt6_Quick/QuickMediaPlayer1/: CMakeLists.txt  main.cpp  main.qml
Qt6_Quick/QuickMediaPlayer2/: CMakeLists.txt  CMakeLists.txt.user.984df84  main.cpp  main.qml
Qt6_Quick/QuickMediaPlayer3/: QuickMediaPlayer3.pro  VideoPlayer.qml  main.cpp  main.qml
Qt6_Quick/TcpSocketTest1/: TcpSocketTest1.pro  main.cpp  main.qml  socketmaster.cpp  socketmaster.h
Qt6_Quick/TestUI1/: main.cpp  main.qml
Qt6_Quick/TestUI2/: TestUI2.pro  logview.qml  main.cpp  main.qml
Qt6_Quick/build-QuickMediaPlayer2-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  appQuickMediaPlayer2.exp  appQuickMediaPlayer2.ilk  appQuickMediaPlayer2.lib  appquickmediaplayer2_qmltyperegistrations.cpp  build.ninja  cmake_install.cmake  qtcsettings.cmake
Qt6_Quick/build-QuickMediaPlayer3-Desktop_Qt_6_2_2_MSVC2019_64bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
Qt6_Quick/build-QuickMediaPlayer3-Desktop_Qt_6_2_2_MSVC2019_64bit-Release/: Makefile  Makefile.Debug  Makefile.Release  release_qmake_resources_qmlcache.qrc
Qt6_Quick/build-QuickMediaPlayer3-Qt_6_2_2_for_macOS-Debug/: Makefile  qmake_resources.qrc  qrc_qmake_resources.cpp
Qt6_Quick/build-TcpSocketTest1-Qt_6_2_2_for_macOS-Debug/: Makefile  moc_socketmaster.cpp  qmake_resources.qrc  qrc_qmake_resources.cpp
Qt6_Quick/build-TestUI1-Qt_6_2_2_for_macOS-Debug/: Makefile  qmake_resources.qrc  qrc_qmake_resources.cpp
Qt6_Quick/build-TestUI2-Qt_6_2_2_for_macOS-Debug/: Makefile  qmake_qmake_immediate.qrc  qmake_qmake_qm_files.qrc  qmake_resources.qrc  qrc_qmake_qmake_immediate.cpp  qrc_qmake_qmake_qm_files.cpp  qrc_qmake_resources.cpp
Qt_Quick/Extra_lessons/lesson1/: CMakeLists.txt  Makefile  README.md  back_main.qml  main.cpp  main.qml
Qt_Quick/Extra_lessons/lesson1/include/: qpointcloud.h
Qt_Quick/Extra_lessons/lesson1/src/: qpointcloudgeometry.cpp  qpointfield.cpp
Qt_Quick/MediaPlayer1/: MediaPlayer1.pro  main.qml
Qt_Quick/MediaPlayer2/: VideoPlayer.qml  main.qml  qml.qrc
Qt_Quick/lesson1/: .gitignore  Makefile  README.md  lesson1.pro  main.cpp  qrc_main.cpp
Qt_Quick/lesson2/: .gitignore  Makefile  lesson2.pro  main.cpp  main.qml  qrc_main.cpp
Qt_Quick/lesson3/: .gitignore  AnimatedEntity.qml  Makefile  lesson3.pro  main.qml  main.qrc  qrc_main.cpp
Qt_Quick/lesson4/: .gitignore  Makefile  lesson4.pro  main.cpp  main.qml  qrc_main.cpp
Qt_Quick/lesson5/: ControlGeometry.h  lesson5.pro  main.cpp  moc_ControlGeometry.cpp  moc_predefs.h
Qt_Quick/lesson6/: .gitignore  ControlGeometry.cpp  main.qml
Qt_Quick/thread_lesson1/: helloworld.cpp  helloworld.h  main.cpp  main.qml  thread_lesson1.pro
Qt_Quick/thread_lesson2/: helloworld.cpp  helloworld.h  main.cpp  main.qml  thread_lesson2.pro
Qt_Widget/ListExample1/: mainwindow.cpp  mainwindow.h
Qt_Widget/MediaPlayer1/: MediaPlayer1.pro  main.cpp  videoplayer.cpp  videoplayer.h
Qt_Widget/MediaPlayer2/: MediaPlayer2.pro  main.cpp  maincontroller.cpp  maincontroller.h  videoplayer.cpp
Qt_Widget/MediaPlayer3/: MediaPlayer3.pro  main.cpp  maincontroller.cpp  videoplayer.h
Qt_Widget/SerialExample1/: SerialExample1.pro  mainwidget.cpp  mainwidget.h  serialmaster.cpp  serialmaster.h
Qt_Widget/SerialExample2/: SerialExample2.pro  (+5 more)
(+48 files in other folders)
